[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latentlm"
version = "0.1.0"
description = "Continious language models"
authors = [{ name = "Odunola Jenrola" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "datasets==2.21.0",
    "librosa",
    "soundfile",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "lightning",
    "wandb",
    "einops",
    "transformers"
]

[project.urls]
homepage = "https://github.com/odunola499/latent-lm-lessons"

[tool.hatch.build.targets.wheel]
packages = ["latentlm"]

[tool.hatch.build.targets.sdist]
include = ["latentlm"]
